--- a/CmsShoppingCart/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shop/Categories.cshtml
@@ -22,7 +22,7 @@
 }
 else
 {
-    <table class="table sorting" id="pages">
+    <table class="table sorting categories" id="pages">
         <tr class="home">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -31,9 +31,10 @@ else
         </tr>
 
         @foreach (var item in Model) {
-            <tr>
+            <tr id="id_@item.Id">
                 <td>
-                    @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                    <div class="ajaxdivtd"></div>
+                    @Html.EditorFor(modelItem => item.Name, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
                 </td>
                 <td>
                     @Html.ActionLink("Delete", "DeleteCategory", new { id=item.Id }, new { @class = "delete" })
@@ -85,7 +86,7 @@ else
                         setTimeout(function() {
                                 ajaxText.fadeOut("fast",
                                     function() {
-                                        ajaxText.html("<img src=~/Content/img/ajax-loader.gif/>")
+                                        ajaxText.html("<img src=/Content/img/ajax-loader.gif />")
                                     });
                             },
                             2000);
@@ -99,7 +100,7 @@ else
                             setTimeout(function () {
                                     ajaxText.fadeOut("fast",
                                         function () {
-                                            ajaxText.html("<img src=/Content/img/ajax-loader.gif />")
+                                            ajaxText.html("<img src=/Content/img/ajax-loader.gif />");
                                         });
                                 },
                                 2000);
@@ -110,19 +111,85 @@ else
                             toAppend.find("#item_Name").val(catName);
                             toAppend.find("a.delete").attr("href", "/admin/shop/DeleteCategory/" + data);
                             table.append(toAppend);
-                            //table.sortable("refresh");
+                            table.sortable("refresh");
                         }
                     }
 
                 });
         });
-
-        // Confirm page deletion
-        $("a.delete").click(function() {
-            if (!confirm("Confirm page deletion")) return false;
-        });
         ////////////
 
+        ////////////
+        $("table#pages tbody").sortable({
+            items: "tr:not(.home)",
+            placeholder: "ui-state-highlight",
+            update: function () {
+                var ids = $("table#pages tbody").sortable("serialize");
+                var url = "/Admin/Shop/ReorderCategories";
+
+                $.post(url, ids, function (data) {
+
+                });
+            }
+        });
+        // Confirm category deletion
+        $("body").on("click",
+            "a.delete",
+            function() {
+                if (!confirm("Confirm category deletion")) return false;
+            });
+        ////////////
+        // Rename category
+
+        var originalTextBoxValue;
+
+        $("table#pages input.text-box").dblclick(function() {
+            originalTextBoxValue = $(this).val();
+            $(this).attr("readonly", false);
+        });
+
+        $("tagle#pages input.text-box").keyup(function(e) {
+            if (e.keyCode == 13) {
+                $(this).blur();
+            }
+        });
+
+        $("table#pages input.text-box").blur(function() {
+            var $this = $(this);
+            var ajaxdiv = $this.parent().find(".ajaxdivtd");
+            var newCatName = $this.val();
+            var id = ajaxdiv.parent().parent().attr("id").substring(3);
+            var url = "/admin/shop/RenameCategory";
+
+            if (newCatName.length < 2) {
+                alert("Category name must be at least 2 characters long.");
+                $this.val(originalTextBoxValue);
+                $this.attr("readonly", true);
+                return false;
+            }
+
+            $.post(url,
+                { newCatName: newCatName, id: id },
+                function(data) {
+                    var response = data.trim();
+
+                    if (response == "titletaken") {
+                        $this.val(originalTextBoxValue);
+                        ajaxdiv.html("<span class='alert alert-danger'>That title is taken!</span>").show();
+                    } else {
+                        ajaxdiv.html("<span class='alert alert-success'>That category name has been changed!</span>").show();
+                    }
+
+                    setTimeout(function() {
+                        ajaxdiv.html("");
+                    }, 2000);
+                }).done(function() {
+                    $this.attr("readonly", true);
+                }
+            );
+
+        });
+        ////////////
     });
 </script>
 }
