--- a/CmsShoppingCart/Content/Site.css
+++ b/CmsShoppingCart/Content/Site.css
@@ -15,3 +15,11 @@ div.new-cat {
 span.ajax-text {
     display: none;
 }
+
+table.sorting.categories td {
+    padding: 20px !important;
+}
+
+.ajaxdivtd {
+    position: absolute;
+}
