--- a/CmsShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
@@ -95,6 +95,7 @@
 }
 
 <form action="/admin/shop/SaveGalleryImages" method="post" enctype="multipart/form-data" class="dropzone" id="dropzoneForm">
+    @Html.Hidden("id", Model.Id)
     <div class="fallback">
         <input type="file" name="file" multiple/>
         <input type="submit" value="Upload"/>
@@ -105,13 +106,16 @@
 
 @foreach (var image in Model.GalleryImages)
 {
-    <div style="display: inline-block">
+    <div style="display: inline-block; margin-right: 15px;">
         <img src="/Images/Uploads/Products/@Model.Id/Gallery/Thumbs/@image"/>
-        @Html.ActionLink("delete", "DeleteImage", "Shop", new { @class = "deleteimage", data_name = image })
+        @Html.ActionLink("delete", "DeleteImage", "Shop", new { @class = "deleteImage", data_name = image })
     </div>
 }
 
+<link href="~/Scripts/dropzone/basic.css" rel="stylesheet" />
+<link href="~/Scripts/dropzone/dropzone.css" rel="stylesheet" />
 @section Scripts {
+<script src="~/Scripts/dropzone/dropzone.js"></script>
     <script>
         $(function () {
             // Preview Selected Image
@@ -136,8 +140,37 @@
             });
             
             // Dropzone js
-            
+            Dropzone.options.dropzoneForm = {
+                acceptedFiles: "image/*",
+                init: function() {
+                    this.on("complete",
+                        function(file) {
+                            if (this.getUploadingFiles().length === 0 && this.getQueuedFiles().length === 0) {
+                                location.reload();
+                            }
+                        });
 
+                    this.on("sending",
+                        function(file, xhr, formData) {
+                            formData.append("id", @Model.Id);
+                        });
+                }
+            }
+
+            // Delete image
+            $("a.deleteImage").click(function(e) {
+                e.preventDefault();
+
+                if (!confirm("Confirm deletion")) return false;
+
+                var $this = $(this);
+                var url = "/admin/shop/DeleteImage";
+                var imageName = $this.data("name");
+
+                $.post(url, { id: @Model.Id, imageName: imageName }, function(data) {
+                    $this.parent().fadeOut("fast");
+                });
+            });
 
         });
     </script>
