--- a/CmsShoppingCart/Areas/Admin/Views/Shop/Products.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shop/Products.cshtml
@@ -86,9 +86,9 @@
                     return false;
                 });
 
-            // Confirm page deletion
+            // Confirm product deletion
             $("a.delete").click(function() {
-                if (!confirm("Confirm page deletion")) return false;
+                if (!confirm("Confirm product deletion")) return false;
             });
             ////////////
 
