Finish coding early in the afternoon due to orange juice making

--- a/CmsShoppingCart/Content/Site.css
+++ b/CmsShoppingCart/Content/Site.css
@@ -36,3 +36,12 @@ span.ajaxmsg {
     position: absolute;
     bottom: 0;
 }
+
+.ajaxcart {
+    position: relative;
+    top: 5px;
+}
+
+.ib {
+    display: inline-block !important;
+}
