--- a/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
+++ b/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
@@ -39,10 +39,65 @@
         @foreach (var image in Model.GalleryImages)
         {
             <div style="display: inline-block;">
-                <a href="/Images/Uploads/Products/@Model.Id/Gallery/@image">
+                <a class="fancybox" rel="gallery1" href="/Images/Uploads/Products/@Model.Id/Gallery/@image">
                     <img src="/Images/Uploads/Products/@Model.Id/Gallery/Thumbs/@image"/>
                 </a>
             </div>
         }
     </div>
 </div>
+
+
+<link href="~/Content/jquery.fancybox.css" rel="stylesheet" />
+@section Scripts {
+    
+<script src="~/Scripts/jquery.fancybox.js"></script>
+    <script>
+
+        $(function() {
+
+            /*
+
+            *fancybox
+
+            */
+            $(".fancybox").fancybox();
+
+
+            //////////////////////////////////////
+
+            /*
+
+            *Add to cart
+
+            */
+            $(".addtocart").click(function(e) {
+                e.preventDefault();
+
+                $("span.loader").addClass("ib");
+
+                var url = "/cart/AddToCartPartial";
+
+                $.get(url,
+                    { id: @Model.Id },
+                    function(data) {
+                        $(".ajaxcart").html(data);
+                    }).done(
+                    function() {
+                        $("span.loader").removeClass("ib");
+                        $("span.ajaxmsg").addClass("ib");
+                        setTimeout(function() {
+                            $("span.ajaxmsg").fadeOut("fast");
+                            $("span.ajaxmsg").removeClass("ib");
+                        }, 1000);
+                    }
+                );
+            });
+
+
+            //////////////////////////////////////
+        });
+
+    </script>
+
+}
