--- a/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
+++ b/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
@@ -71,7 +71,7 @@
             *Add to cart
 
             */
-            $(".addtocart").click(function(e) {
+            $("a.addtocart").click(function(e) {
                 e.preventDefault();
 
                 $("span.loader").addClass("ib");
