--- a/CmsShoppingCart/Views/Cart/Index.cshtml
+++ b/CmsShoppingCart/Views/Cart/Index.cshtml
@@ -42,11 +42,11 @@ else
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductName)
                 </td>
-                <td>
+                <td class="qty@(item.ProductId)">
                     @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Price)
+                    $@Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
                     <img src="/Images/Uploads/Products/@item.ProductId/Thumbs/@item.Image"/>
@@ -58,14 +58,88 @@ else
                     <a href="#" class="removeproduct" data-id="@item.ProductId">Remove</a>
                 </td>
                 
-                <td>
+                <td class="total@(item.ProductId)">
                     $@Html.DisplayFor(modelItem => item.Total)
                 </td>
             </tr>
         }
         <tr>
             <td></td><td></td><td></td><td></td><td></td><td></td>
-            <td>$@ViewBag.GrandTotal</td>
+            <td class="grandtotal"><b>Grand total </b>$<span>@ViewBag.GrandTotal</span></td>
         </tr>
     </table>
+}
+
+@section Scripts {
+    <script>
+$(function () {
+    // Increment product
+    $("a.incrproduct").click(function(e) {
+        e.preventDefault();
+
+        var productId = $(this).data("id");
+        var url = "/cart/IncrementProduct";
+
+        $.getJSON(url, { productId: productId }, function (data) {
+
+            $("td.qty" + productId).html(data.qty);
+
+            var price = data.qty * data.price;
+            var priceHtml = "$" + price.toFixed(2);
+
+            $("td.total" + productId).html(priceHtml);
+
+            var gt = parseFloat($("td.grandtotal span").text());
+            var grandtotal = (gt + data.price).toFixed(2);
+            
+            $("td.grandtotal span").text(grandtotal);
+        });
+    });
+    ////////////
+
+    // Decrement product
+    $("a.descproduct").click(function (e) {
+        e.preventDefault();
+        var $this = $(this);
+        var productId = $(this).data("id");
+        var url = "/cart/DecrementProduct";
+
+        $.getJSON(url, { productId: productId }, function (data) {
+
+            if (data.qty == 0) {
+                $this.parent().parent().fadeOut("fast", function() {
+                    location.reload();
+                });
+
+            } else {
+                $("td.qty" + productId).html(data.qty);
+
+                var price = data.qty * data.price;
+                var priceHtml = "$" + price.toFixed(2);
+
+                $("td.total" + productId).html(priceHtml);
+
+                var gt = parseFloat($("td.grandtotal span").text());
+                var grandtotal = (gt - data.price).toFixed(2);
+
+                $("td.grandtotal span").text(grandtotal);
+            }
+        });
+    });
+    ////////////
+
+    // Remove product
+    $("a.removeproduct").click(function (e) {
+        e.preventDefault();
+        var $this = $(this);
+        var productId = $(this).data("id");
+        var url = "/cart/RemoveProduct";
+
+        $.get(url, { productId: productId }, function (data) {
+            location.reload();
+        });
+    });
+    ////////////
+});
+    </script>
 }
