--- a/CmsShoppingCart/Views/Cart/Index.cshtml
+++ b/CmsShoppingCart/Views/Cart/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Cart Details";
+    int count = 1;
 }
 
 <h2>Cart Details</h2>
@@ -12,13 +13,14 @@
 }
 else
 {
+    
     <table class="table">
         <tr>
             <th>
                 Name
             </th>
             <th>
-                 Quantity
+                Quantity
             </th>
             <th>
                 Price
@@ -27,12 +29,12 @@ else
                 Image
             </th>
             <th>
-                
+
             </th>
             <th>
                 Total
             </th>
-            
+
             <th></th>
         </tr>
 
@@ -51,13 +53,13 @@ else
                 <td>
                     <img src="/Images/Uploads/Products/@item.ProductId/Thumbs/@item.Image"/>
                 </td>
-                
+
                 <td>
                     <a href="#" class="incrproduct" data-id="@item.ProductId">+</a>
                     <a href="#" class="descproduct" data-id="@item.ProductId">-</a>
                     <a href="#" class="removeproduct" data-id="@item.ProductId">Remove</a>
                 </td>
-                
+
                 <td class="total@(item.ProductId)">
                     $@Html.DisplayFor(modelItem => item.Total)
                 </td>
@@ -68,6 +70,30 @@ else
             <td class="grandtotal"><b>Grand total </b>$<span>@ViewBag.GrandTotal</span></td>
         </tr>
     </table>
+
+    <div class="paypaldiv">
+        <form class="paypalform" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_cart">
+            <input type="hidden" name="business" value="minhvnguyen.91-facilitator@gmail.com">
+
+            @foreach (var item in Model)
+            {
+                <input type="hidden" name="item_name_@count" value="@item.ProductName">
+                <input type="hidden" name="amount_@count" value="@item.Price">
+                <input type="hidden" name="quantity_@count" value="@item.Quantity">
+                count++;
+            }
+
+
+
+            <input type="hidden" name="currency_code" value="USD">
+
+            <input type="image" src="http://www.paypal.com/en_US/i/btn/x-click-but01.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+        </form>
+    </div>
+    <br/>
+
+    <a href="#" class="placeorder btn btn-primary pull-right">Checkout</a>
 }
 
 @section Scripts {
@@ -93,6 +119,12 @@ $(function () {
             var grandtotal = (gt + data.price).toFixed(2);
             
             $("td.grandtotal span").text(grandtotal);
+        }).done(function(data) {
+            var url2 = "/cart/PaypalPartial";
+
+            $.get(url2, {}, function (data) {
+                $("div.paypaldiv").html(data);
+            });
         });
     });
     ////////////
@@ -124,6 +156,12 @@ $(function () {
 
                 $("td.grandtotal span").text(grandtotal);
             }
+        }).done(function (data) {
+            var url2 = "/cart/PaypalPartial";
+
+            $.get(url2, {}, function (data) {
+                $("div.paypaldiv").html(data);
+            });
         });
     });
     ////////////
@@ -137,6 +175,25 @@ $(function () {
 
         $.get(url, { productId: productId }, function (data) {
             location.reload();
+        });
+    });
+    ////////////
+
+    // Place order
+    $("a.placeorder").click(function (e) {
+        e.preventDefault();
+        var $this = $(this);
+
+        var url = "/cart/PlaceOrder";
+
+        $(".ajaxbg").show();
+
+        $.post(url, { }, function (data) {
+            $(".ajaxbg span").text("Thanks, you will now be redirected!");
+            setTimeout(function() {
+                //$("form input[name='submit']").click();
+                location.href = "~/";
+            }, 2000);
         });
     });
     ////////////
