--- a/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
+++ b/CmsShoppingCart/Views/Shop/ProductDetails.cshtml
@@ -17,14 +17,18 @@
         <br />
         $@Html.DisplayFor(model => model.Price)
         <br />
+
+        @if (Request.IsAuthenticated)
+        {
+            <div class="addtocart">
+                <a href="#" class="addtocart">Add to cart</a>
+                <span class="loader">
+                    <img src="~/Content/img/ajax-loader.gif" />
+                </span>
+                <span class="ajaxmsg">The product has been added to your cart.</span>
+            </div>
+        }
         
-        <div class="addtocart">
-            <a href="#" class="addtocart">Add to cart</a>
-            <span class="loader">
-                <img src="~/Content/img/ajax-loader.gif" />
-            </span>
-            <span class="ajaxmsg">The product has been added to your cart.</span>
-        </div>
     </div>
 </div>
 
